tests/paczka1/fuzzy1/91058679.err
Error in line 10: PEr S295 15,5
Error in line 19: veWmC A472 3,3
Error in line 21: veWmC A383 28,7
Error in line 12: K7Nmt3npbr S295 84,9
Error in line 22: veWmC S295 93,2
Error in line 27: KOiIvyc A472 7,0
